Corrected naming error that caused clips to collapse on Participant Detail page. Fixes #115.

--- a/content/themes/glp/less/style.less
+++ b/content/themes/glp/less/style.less
@@ -556,7 +556,7 @@
 				line-height: 50px;
 				border-bottom: 1px dotted @gray;
 			}
-			.participant-clip {
+			.participant-clip-listing {
 				padding: 1em 0;
 				border-bottom: 1px dotted @gray;
 				font-size: @fontSizeMini;
